# ssLogger

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  logo.psd
CI/: RunHeaderOnlyTests.bat  RunHeaderOnlyTests.sh  RunSourceTests.bat  RunSourceTests.sh  RunTests.bat  RunTests.sh  ssLoggerMain.gocd.yaml
Include/ssLogger/: ssLog.hpp  ssLogAPIHelper.hpp  ssLogInit.hpp  ssLogLevels.hpp  ssLogSwitches.hpp  ssLogThreadInfo.hpp
Src/: ssLogInit.cpp
Src/Tests/: LogFunctionTest.cpp  LogLevelTest.cpp  LogLineTest.cpp  LogMultiThreadTest.cpp  LogRotationTest.cpp
include/ssLogger/: ssLog.hpp  ssLogInit.hpp  ssLogSwitches.hpp
src/: CMakeLists.txt  ssLogInit.cpp
src/headerOnlyTests/: LogFunctionTest.cpp  LogLineTest.cpp  LogMultiThreadTest.cpp
src/sourceTests/: LogFunctionTest.cpp  LogLineTest.cpp  LogMultiThreadTest.cpp
